.kubernetes/legacy-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legacy-service
  template:
    metadata:
      labels:
        app: legacy-service
    spec:
      containers:
        - name: legacy-service
          image: davi7816/testlegacy
