.kubernetes/location-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location-service
  template:
    metadata:
      labels:
        app: location-service
    spec:
      containers:
        - name: location-service
          image: davi7816/testlocationservice
          ports:
            - name: http
              containerPort: 5002
